package com.example.shift_control_fingerprints;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ShiftControlFingerprintsApplication {

	public static void main(String[] args) {
		SpringApplication.run(ShiftControlFingerprintsApplication.class, args);
	}

}
