package com.example.shift_control_fingerprints.exception;

public class EnterpriseException extends RuntimeException{
    public EnterpriseException(String message) {
        super(message);
    }
}
